# youtube-video-summarizer

./: .env.example  .gitignore  README.md  app.py  config.example.yaml  pyproject.toml  run.bat
docs/: youtube-video-summarizer-mvp-plan.md
prompts/: chunk_summary.md  final_summary.md
src/tubenote/: __init__.py  audio.py  chunking.py  cli.py  config.py  diarization.py  errors.py  models.py  pipeline.py  renderer.py  security.py  storage.py  summarizer.py  transcriber.py  transcript.py  youtube.py
tests/: test_chunking.py  test_diarization.py  test_pipeline_resume.py  test_renderer.py  test_security.py  test_summarizer.py  test_transcript.py  test_youtube.py  test_youtube_opts.py
