[project]
name = "tubenote-local"
version = "0.1.0"
description = "개인용 YouTube 영상 요약 앱 (TubeNote Local)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "openai>=2.43.0",
    "streamlit>=1.58.0",
]

[project.scripts]
tubenote = "tubenote.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
diarization = [
    "pyannote.audio>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tubenote"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
