[project]
name = "tubenote-local"
version = "0.1.0"
description = "개인용 YouTube 영상 요약 앱 (TubeNote Local)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "openai>=2.43.0",
    "streamlit>=1.58.0",
]

[project.scripts]
tubenote = "tubenote.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
diarization = [
    "pyannote.audio>=3.1,<4",
    # pyannote 3.x 호환 + Python 3.13 휠 존재 범위:
    # torch 2.6~2.7 (cp313 휠 O), torchaudio <2.8 (AudioMetaData 보유, torchcodec 불필요).
    # 기본은 CPU 빌드. GPU 사용법은 README "화자 분리" 참고.
    "torch>=2.6,<2.8",
    "torchaudio>=2.6,<2.8",
    # pyannote 3.x는 hf_hub의 use_auth_token을 사용 → 1.0에서 제거됨. <1.0으로 고정.
    # (base 의존성도 모두 <1.0/<2.0 허용하므로 안전)
    "huggingface-hub>=0.30,<1.0",
]

[tool.uv]
# Windows에서 torch/torchaudio의 win_amd64 휠을 반드시 해석하도록 강제
required-environments = ["sys_platform == 'win32' and platform_machine == 'AMD64'"]

# 화자 분리(pyannote)용 torch를 CUDA(cu128) 빌드로 설치해 GPU 가속.
# torch 2.7.x는 cu128 + cp313 휠을 제공한다. 화자 분리 extra 설치 시에만 적용.
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tubenote"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
